<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    >

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:id="@+id/login_screen_header"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/keyline_1"
            android:background="@color/theme_primary_dark"
            android:gravity="center"
            android:layout_alignParentTop="true"
            >
            <TextView
                android:id="@+id/login_screen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="-16dp"
                style="@style/typography_display_3_inverse"
                />
            <TextView
                android:id="@+id/login_screen_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_screen_title"
                android:layout_centerHorizontal="true"
                android:text="@string/login_subtitle"
                style="@style/typography_subhead_inverse"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/login_screen_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_screen_header"
            android:paddingTop="@dimen/keyline_1"
            android:paddingLeft="@dimen/keyline_1"
            android:paddingRight="@dimen/keyline_1"
            android:paddingBottom="@dimen/keyline_1"
            android:text="@string/login_description"
            style="@style/typography_subhead"
            />


            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_screen_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="@dimen/keyline_1"
                android:layout_marginRight="@dimen/keyline_1"
                android:layout_marginTop="@dimen/keyline_2"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                />
    </RelativeLayout>
</RelativeLayout>
