<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:fab="http://schemas.android.com/apk/res-auto"
             xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="fill_vertical"
        >

        <ImageView
            android:id="@+id/add_gift_picture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            />

        <!-- Edit Group -->
        <ScrollView
            android:id="@+id/add_gift_edit_group"
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:paddingLeft="@dimen/keyline_1"
            android:paddingStart="@dimen/keyline_1"
            android:paddingRight="@dimen/keyline_1"
            android:paddingEnd="@dimen/keyline_1"
            android:paddingTop="@dimen/keyline_1"
            android:paddingBottom="@dimen/keyline_1"
            android:isScrollContainer="false"
            android:background="@color/theme_primary"
            android:visibility="gone"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <EditText
                    android:id="@+id/add_gift_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/add_gift_title_hint"
                    android:textColorHint="@color/body_text_3"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:imeOptions="actionNext"
                    style="@style/typography_subhead_inverse"
                    />
                <EditText
                    android:id="@+id/add_gift_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/add_gift_description_hint"
                    android:textColorHint="@color/body_text_3"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:imeOptions="actionDone"
                    style="@style/typography_subhead_inverse"
                    />

                <!-- Brightness -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingStart="4dp"
                    android:paddingRight="4dp"
                    android:paddingEnd="4dp"
                    style="@style/typography_subhead_inverse"
                    android:text="@string/effect_brightness"
                    />
                <com.mocca_capstone.potlatch.widgets.StartMiddleSeekBar
                    android:id="@+id/add_gift_brightness_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progressDrawable="@android:color/transparent"
                    android:progress="64"
                    android:max="128"
                    />

                <!-- Contrast -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingStart="4dp"
                    android:paddingRight="4dp"
                    android:paddingEnd="4dp"
                    style="@style/typography_subhead_inverse"
                    android:text="@string/effect_contrast"
                    />

                <com.mocca_capstone.potlatch.widgets.StartMiddleSeekBar
                    android:id="@+id/add_gift_contrast_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progressDrawable="@android:color/transparent"
                    android:progress="64"
                    android:max="128"
                    />

                <!-- Saturation -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingStart="4dp"
                    android:paddingRight="4dp"
                    android:paddingEnd="4dp"
                    style="@style/typography_subhead_inverse"
                    android:text="@string/effect_saturation"
                    />
                <com.mocca_capstone.potlatch.widgets.StartMiddleSeekBar
                    android:id="@+id/add_gift_saturation_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:progressDrawable="@android:color/transparent"
                    android:progress="50"
                    android:max="100"
                    />
            </LinearLayout>
        </ScrollView>


        <!-- Results Group -->
        <LinearLayout
            android:id="@+id/add_gift_result_group"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:paddingLeft="@dimen/keyline_1"
            android:paddingStart="@dimen/keyline_1"
            android:paddingRight="@dimen/keyline_1"
            android:paddingEnd="@dimen/keyline_1"
            android:paddingTop="@dimen/keyline_1"
            android:paddingBottom="@dimen/keyline_1"
            android:gravity="center_vertical"
            android:background="@color/theme_primary"
            android:visibility="gone"
            >
            <com.mocca_capstone.potlatch.widgets.BezelImageView
                android:id="@+id/add_gift_result_profile_pic"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher"
                app:maskDrawable="@drawable/circle_mask"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/base_padding_level"
                >
                <TextView
                    android:id="@+id/add_gift_result_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_gift_title_hint"
                    android:textColorHint="@color/body_text_3"
                    style="@style/typography_title_inverse"
                    />
                <TextView
                    android:id="@+id/add_gift_result_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_gift_description_hint"
                    android:textColorHint="@color/body_text_3"
                    android:visibility="gone"
                    style="@style/typography_subhead_inverse"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- FAB -->
    <com.mocca_capstone.potlatch.widgets.ProgressBarCircularIndeterminate
        android:id="@+id/add_gift_progressbar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="158dp"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:background="@color/theme_accent_2"
        android:visibility="gone"
        />

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/add_gift_upload_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="154dp"
        android:layout_marginRight="@dimen/keyline_2"
        android:layout_marginEnd="@dimen/keyline_2"
        android:src="@drawable/ic_action_upload_gift"
        fab:fab_colorNormal="@color/theme_accent_1"
        fab:fab_colorPressed="@color/theme_accent_2"
        fab:fab_colorRipple="@color/theme_accent_1"
        android:visibility="gone"
        />
    <include layout="@layout/toolbar_actionbar" />
</FrameLayout>